--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.2.0",
+    "@stripe/react-stripe-js": "^3.8.0",
+    "@stripe/stripe-js": "^7.6.1",
     "@supabase/supabase-js": "^2.51.0",
     "axios": "^1.10.0",
     "react": "^19.1.0",
